# bayes-mef

./: .gitignore  LICENSE  README.md  demo.ipynb  download_data.sh  pyproject.toml  requirements.txt
bayes_mef/: __init__.py  algos.py  mef_launcher.py  synthetic_data_generation.py  utils.py
scripts/: demo.ipynb  experimental_mef.py  pty_recon.py  synthetic_mef.py  synthetic_tests.py
