[tool.poetry]
name = "bayes_mef"
version = "0.1.1"
description = "Implementation of the Bayesian MEF method"
authors = ["Shantanu Kodgirwar <shantanu.kodgirwar@uni-jena.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.22,<=1.24.3"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
scikit-image = "^0.21.0"
h5py = "^3.9.0"
tqdm = "^4.65.0"
black = "^23.7.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
